<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/almost_white">

    <RelativeLayout
        android:id="@+id/import_authcode_title_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/vivid_blue">

        <Button
            android:id="@+id/import_authcode_backbtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_back"
            android:theme="@style/Platform.MaterialComponents.Light" />

        <TextView
            android:id="@+id/import_authcode_title"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/magicmrs_import_authcode_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/import_authcode_message"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/import_authcode_title_layout"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:gravity="center"
            android:text="@string/magicmrs_authcode"
            android:textColor="@color/bright_blue"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:gravity="center"
            android:text="@string/magicmrs_import_authcode_prompt"
            android:textColor="@color/dark_grey"
            android:textSize="20sp" />

    </LinearLayout>


    <ImageView
        android:id="@+id/import_authcode_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/import_authcode_message"
        android:background="@color/seperate_line_grey"
        android:contentDescription="@null" />

    <Button
        android:id="@+id/import_authcode_ok_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@color/bright_blue"
        android:gravity="center"
        android:text="@string/magicmrs_import_authcode_btn"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/import_authcode_ok_btn"
        android:layout_below="@+id/import_authcode_line"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/square_blue"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/import_authcode_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/vivid_blue"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/magicmrs_authcode"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:weightSum="2">

                <EditText
                    android:id="@+id/authcode_first"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/square_white"
                    android:cursorVisible="false"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/authcode_second"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/square_white"
                    android:cursorVisible="false"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/import_auth_message"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:text="@string/magicmrs_import_authcode_content"
                android:textColor="@color/dark_grey"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>